--- a/index.html
+++ b/index.html
@@ -92,7 +92,15 @@
                             d="M12 11.9l10.24-4.267v-.966C22.24 5.194 21.094 4 19.68 4H4.32C2.906 4 1.76 5.194 1.76 6.667v.966L12 11.9z" />
                     </svg>
                     <a href="mailto:abbazs@gmail.com"
-                        class="text-black hover:underline"><!--email_off-->abbazs@gmail.com<!--email_off--></a>
+                        class="text-black hover:underline"><!--email_off-->abbazs@gmail.com<!--email_off--></a><br/>
+                    </div>
+                <div class="contact-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#000">
+                        <path
+                            d="M19.68 20c1.414 0 2.56-1.194 2.56-2.667V10.5l-9.765 4.072a1.005 1.005 0 01-.475.095c-.232 0-.392-.034-.472-.099L1.76 10.5v6.833C1.76 18.806 2.906 20 4.32 20h15.36z" />
+                        <path
+                            d="M12 11.9l10.24-4.267v-.966C22.24 5.194 21.094 4 19.68 4H4.32C2.906 4 1.76 5.194 1.76 6.667v.966L12 11.9z" />
+                    </svg>
                     <a href="mailto:22f2000997@ds.study.iitm.ac.in" class="text-black hover:underline">
                         <!--email_off-->22f2000997@ds.study.iitm.ac.in<!--/email_off--></a>
                 </div>
